logo, imágenes y font

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'shiba-font';
+    src: url('resources/fonnts.com-New_Order_Semibold.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h2,h3{
+    font-family: 'shiba-font', sans-serif;
+}
 /* Reset and Base Styles */
 * {
     margin: 0;
@@ -62,14 +72,21 @@
 }
 
 .logo {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 8rem;
+    height: 6rem;
+    object-fit: cover;
+    margin-right: 0px;
+
 }
 
 .brand-name {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: bold;
     line-height: 1.2;
+    font-family: 'shiba-font', sans-serif;
+    padding-left: 0%;
+    margin-left: 0px;
+    
 }
 
 .nav-center {
@@ -165,6 +182,22 @@
     background: linear-gradient(90deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.3) 100%);
 }
 
+.hero-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.hero-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5; /* Adjust opacity as needed */
+}
+
 .hero-content {
     position: relative;
     max-width: 1280px;
@@ -185,7 +218,7 @@
     font-weight: bold;
     margin-bottom: 1.5rem;
     line-height: 1.2;
-    color: #FF9F7B;
+    color: #fc7a43;
 }
 
 .hero-text p {
