--- a/demo/src/main/resources/templates/mostrar_todas_mascotas.html
+++ b/demo/src/main/resources/templates/mostrar_todas_mascotas.html
@@ -7,6 +7,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/pet_table.css" />
   </head>
   <body>
     <h1>Conoce las Mascotas en Clínica Shiba</h1>
