--- a/demo/src/main/resources/static/css/multi_pet_table.css
+++ b/demo/src/main/resources/static/css/multi_pet_table.css
@@ -1,16 +1,26 @@
+@font-face {
+  font-family: "shiba-font";
+  src: url("resources/fonnts.com-New_Order_Semibold.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
 /* Base styles */
-.pet-container {
+body {
   max-width: 1280px;
   margin: 2rem auto;
   padding: 0 1rem;
+  background-color: #fff7ed;
 }
 
-h1 {
+h1,
+h2 {
   font-family: "shiba-font", sans-serif;
   color: #4c1d95;
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 2rem;
+  margin-top: 2rem;
+  font-weight: bold;
 }
 
 .table-container {
