--- a/demo/src/main/resources/templates/mostrar_todas_mascotas.html
+++ b/demo/src/main/resources/templates/mostrar_todas_mascotas.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="/css/multi_pet_table.css" />
   </head>
   <body>
-    <h1>Conoce las Mascotas en Clínica Shiba</h1>
+    <h1>✨ Conoce las Mascotas en Clínica Shiba ✨</h1>
 
     <div class="table-container">
       <table class="table table-striped table-bordered table-hover">
         <thead class="table-dark">
           <tr>
-            <th>ID</th>
             <th>Nombre</th>
             <th>Edad</th>
             <th>Raza</th>
@@ -28,7 +27,6 @@
         </thead>
         <tbody>
           <tr th:each="mascota : ${mascotas}">
-            <td th:text="${mascota.id}"></td>
             <td th:text="${mascota.nombre}"></td>
             <td th:text="${mascota.edad}"></td>
             <td th:text="${mascota.raza}"></td>
